Sessao redes social media Concluida

--- a/index.html
+++ b/index.html
@@ -31,5 +31,22 @@
             <ion-icon name="grid-outline"></ion-icon>
         </div>
     </header>
+    <main id="home">
+        <div class="container">
+            <div class="icons">
+                <a href="https://web.whatsapp.com/send?phone=5543999605565" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/caioprogramadorpr/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="https://github.com/CaioDevPR" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+                <a href="mailto: programadorpr@outlook.com" target="_blank"><ion-icon name="mail-outline"></ion-icon></a>
+                <a href="https://codepen.io/caiodevpr" target="_blank"><ion-icon name="logo-codepen"></ion-icon></a>
+               </div>
+               <div class="title">
+                <h1>Caio</h1>
+                <h2>Vinicius</h2>
+                <h3>Developer</h3>
+                
+               </div>
+        </div>
+    </main>
 </body>
 </html>
